tests/paczka1/small_fuzzy/49803746.err
Error in line 1: xhQqGrIM A287 54,1
Error in line 3: xhQqGrIM S633 89,0
Error in line 7: ePj1r8fuk10 S297 2,2
Error in line 6: xhQqGrIM A287 45,7
